--- a/kontext/package.json
+++ b/kontext/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -20,7 +21,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "context-menu-angular6": "0.0.6",
     "core-js": "^2.5.4",
+    "ngx-contextmenu": "^5.0.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
