need to -> show that filter is active/inactive, expand to filtered level, turn pagination back on & fix look/feel, add page contents, expand-all, gather details on page when item is clicked, with clever loading

--- a/kontext/angular.json
+++ b/kontext/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "styles-app-loading.scss",
               "src/styles.css"
             ],
             "scripts": []
