toasta banners added!

--- a/kontext/package.json
+++ b/kontext/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^6.1.0",
     "context-menu-angular6": "0.0.6",
     "core-js": "^2.5.4",
+    "ng2-toastr": "^4.1.2",
     "ngx-contextmenu": "^5.0.3",
+    "ngx-toasta": "^0.1.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
